--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
 					</div>
 					<div class="col-11 col-md-11 p-0">
 						<h6>Hospitality India</h6>
-						<address>3rd Floor, Gamma Block, Sigma Soft Tech Park, Whitefield, Bangalore, Karnataka, India <br>Call us directly: +91 88835 22244
+						<address>3rd Floor, Above Hyundai showroom, Dollars colony, Bangalore, Karnataka, India <br>Call us directly: +91 99936 22244
 						</address>
 					</div>
 				</div>
